--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
 </head>
 
 <body>
-    las
+    <div>
+        <div>X</div>
+    </div>
+
+    <div>
+        <img src="./img/labirintas.png" alt="">
+        <div>
+            <h1>404</h1>
+            <p>Looks like you are in a maze.</p>
+            <p>Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Doloremque nam possimus
+                fugiat accusamus minima at.</p>
+        </div>
+    </div>
 </body>
 
 </html>
