spalvos ir tekstai svetaineje

--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 </head>
 
 <body>
-    <div>
+    <div style="background-color: brown;">
         <div>X</div>
     </div>
 
-    <div>
-        <img src="./img/labirintas.png" alt="">
-        <div>
-            <h1>404</h1>
-            <p>Looks like you are in a maze.</p>
-            <p>Lorem ipsum dolor sit amet consectetur
+    <div style="width: 100%; background-color: lightblue;">
+        <img style="background-color: red; width: 30%;" src="./img/labirintas.png" alt="">
+        <div style="background-color: blue; display: inline-block;">
+            <h1 style="">404</h1>
+            <p style="">Looks like you are in a maze.</p>
+            <p style="">Lorem ipsum dolor sit amet consectetur
                 adipisicing elit. Doloremque nam possimus
                 fugiat accusamus minima at.</p>
         </div>
@@ -25,3 +25,22 @@
 </body>
 
 </html>
+
+<!--
+    background-color: red; (fono spalva)
+    color: black (teksto spalva)
+    font-size: 100px;
+    font-family: Arial;
+    font-weight: normal  //700
+    font-weight: bold    //400
+    text-style: italic
+    toxt-decoration: underline;
+    
+    width: 200px
+    width: 50%
+
+    display: block;      //default- elementai deliojami vertikaliai
+    display: inline       //elgiasi kaip tekstas
+    display: none          //elementas nerodomas
+    display: inline-block   //mix tarp inline ir block()
+-->
