--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <title>Document</title>
 </head>
 
-<body>
-    <div style="background-color: brown;">
-        <div>X</div>
+<body style="font-family: Arial, Helvetica, sans-serif;">
+    <div style="width: 100%; display: inline-block;">
+        <div><img style="height: 40px; float:right; margin: 10px" src="./img/xxx.png" alt=""></div>
     </div>
 
-    <div style="width: 100%; background-color: lightblue;">
-        <img style="background-color: red; width: 30%;" src="./img/labirintas.png" alt="">
-        <div style="background-color: blue; display: inline-block;">
-            <h1 style="">404</h1>
-            <p style="">Looks like you are in a maze.</p>
-            <p style="">Lorem ipsum dolor sit amet consectetur
+    <div style="width: 46%; display: inline-block; margin-left: 27%; margin-top: 100px;">
+        <img style="width: 35%; float: left;" src="./img/Untitled.png" alt="">
+        <div style="width: 40%; float: left; margin-left: 10%; margin-top: 40px;  color: green; ">
+            <h1 style="font-size: 170px; margin: 0; ;">404</h1>
+            <p style=" font-size: 24px; line-height: 1,2em; font-size: 20px;">Looks like you are in a maze.</p>
+            <p style="font-size: 22px 1,2em Arial, Helvetica, sans-serif; color: black;">Lorem ipsum dolor sit amet consectetur
                 adipisicing elit. Doloremque nam possimus
                 fugiat accusamus minima at.</p>
         </div>
@@ -27,6 +27,10 @@
 </html>
 
 <!--
+    px - primityviausias matavimo vienetas
+    % - reliatyvus matavimo vienetas
+    em - proporcingas font-size(srifto dydziui)
+    1 em = 100% 
     background-color: red; (fono spalva)
     color: black (teksto spalva)
     font-size: 100px;
@@ -35,6 +39,7 @@
     font-weight: bold    //400
     text-style: italic
     toxt-decoration: underline;
+    line-height:0           //eilutes aukstis
     
     width: 200px
     width: 50%
@@ -43,4 +48,10 @@
     display: inline       //elgiasi kaip tekstas
     display: none          //elementas nerodomas
     display: inline-block   //mix tarp inline ir block()
+    float: left             //priverstinis elemento statymas
+    margin: 0               //atstumas iki aplinkiniu elementu visomis kryptimis
+    margin-left
+    margin-right
+    margin-top
+    margin-bottom
 -->
