--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
             <p style="font-size: 22px 1,2em Arial, Helvetica, sans-serif; color: black;">Lorem ipsum dolor sit amet consectetur
                 adipisicing elit. Doloremque nam possimus
                 fugiat accusamus minima at.</p>
+            <a style="box-shadow: 0 5px 10px 2px #61ae4f;
+            display: inline-block; 
+            background-color: #61ae4f; 
+            color: white; 
+            text-decoration: none; 
+            padding-top: 10px; 
+            padding-left: 20px; 
+            padding-right: 20px; 
+            padding-bottom: 10px;" href="#">Go back home</a>
         </div>
     </div>
 </body>
@@ -27,6 +36,8 @@
 </html>
 
 <!--
+padding-top: 10px; padding-left: 20px; padding-right: 20px; padding-bottom: 10px;
+
     px - primityviausias matavimo vienetas
     % - reliatyvus matavimo vienetas
     em - proporcingas font-size(srifto dydziui)
@@ -54,4 +65,10 @@
     margin-right
     margin-top
     margin-bottom
+
+    padding: 0              //atstumas nuo elemento turinio, iki elemento krastu
+    padding-left
+    padding-right
+    padding-top
+    padding-bottom
 -->
